Fixes bar alignment (related to #13 fix).

--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@
 .fn-gantt .bar {
     background-color: #D0E4FD;
     height: 18px;
-    margin: 4px 3px 3px 3px;
+    margin: 4px 3px 3px 0px;
     position: absolute;
     z-index: 10;
     text-align: center;
